[tool.poetry]
name = "mmr_ml"
version = "0.1.0"
description = "Classical Machine-Learning Approach to the identification of mean-motion resonances"
authors = ["Evgeny Smirnov <smirik@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mmr_ml" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.3"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.0"
prettytable = "^3.9.0"
imbalanced-learn = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
skip-string-normalization = true
